2005-08-06  Roland Illig  <roland.illig@gmx.de>

	* textconf.c: Include ecs_char in the list of type
	characteristics that are printed.

2005-08-05  Pavel Tsekov  <ptsekov@gmx.net>

	* menu.c (menubar_draw): Use hline() instead of addch() to clear
	the menubar widget area.

2005-07-31  Roland Illig  <roland.illig@gmx.de>

	* view.c: Removed global variable have_fast_cpu. It is not used
	anymore.
	* view.h: Renamed view to mc_internal_viewer. This avoids
	hundreds of shadowed names in view.c.

2005-07-31  Roland Illig  <roland.illig@gmx.de>

	* user.c (execute_menu_command): Allow execution on no-exec
	filesystems. This fixes Savannah Bug #13832.

2005-07-31  Roland Illig  <roland.illig@gmx.de>

	* Makefile.am: Added support for extended character sets.
	* ecs.h: Support for extended character sets.
	* ecs.c: Likewise.
	* ecs-test.c: Testsuite for ecs.c.

2005-07-27  Adam Byrtek  <alpha@debian.org>

	* utilunix.c (mc_tmpdir): Check that tmpdir is correctly initialized.

2005-07-24  Leonard den Ottolander  <leonard den ottolander nl>

	* wtools.h: #include "widget.h" and remove redundant declarations
	of Dlg_head and WListbox;

2005-07-23  Roland Illig  <roland.illig@gmx.de>

	* util.c (save_file_position): Only save the position if not
	at the beginning of the file (1;0).
	* view.c: When saving and loading the file position, use the
	full pathname instead of the one passed as argument.

2005-07-22  Roland Illig  <roland.illig@gmx.de>

	* charsets.c: Fixed wrong comparison of the result of iconv().

2005-07-22  Roland Illig  <roland.illig@gmx.de>

	* utilunix.c: Replaced the use of getgrouplist() with
	getgroups(), which is more appropriate and does not contain a
	buffer overflow in most recent glibc versions (upto 2.3.2).
	Simplified the code. Removed init_groups() and destroy_groups().
	They are unnecessary.
	* main.c: init_groups() and destroy_groups() have disappeared,
	so don't call them.

2005-07-22  Roland Illig  <roland.illig@gmx.de>
